# ChangeLog for x11-libs/libXmu
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXmu/ChangeLog,v 1.80 2013/02/22 18:45:16 zmedico Exp $

  22 Feb 2013; Zac Medico <zmedico@gentoo.org> libXmu-1.1.1.ebuild:
  Add ~arm-linux keywords.

  26 Aug 2012; Raúl Porcel <armin76@gentoo.org> libXmu-1.1.1.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #419473

  12 Jul 2012; Brent Baude <ranger@gentoo.org> libXmu-1.1.1.ebuild:
  Marking libXmu-1.1.1 ppc stable for bug 419473

  11 Jul 2012; Brent Baude <ranger@gentoo.org> libXmu-1.1.1.ebuild:
  Marking libXmu-1.1.1 ppc64 stable for bug 419473

  29 Jun 2012; Markus Meier <maekke@gentoo.org> libXmu-1.1.1.ebuild:
  arm stable, bug #419473

  28 Jun 2012; Jeroen Roovers <jer@gentoo.org> libXmu-1.1.1.ebuild:
  Stable for HPPA (bug #419473).

  24 Jun 2012; Agostino Sarubbo <ago@gentoo.org> libXmu-1.1.1.ebuild:
  Stable for x86, wrt bug #419473

  22 Jun 2012; Agostino Sarubbo <ago@gentoo.org> libXmu-1.1.1.ebuild:
  Stable for amd64, wrt bug #419473

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> libXmu-1.1.1.ebuild:
  keyword ~amd64-fbsd

*libXmu-1.1.1 (07 Mar 2012)

  07 Mar 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libXmu-1.1.1.ebuild:
  Version bump.

  22 Jun 2011; Fabian Groffen <grobian@gentoo.org> libXmu-1.1.0.ebuild:
  Marked ~x64-macos, bug #371861

  14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> libXmu-1.1.0.ebuild:
  ppc stable wrt #344827, #354237

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> libXmu-1.1.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #344827

  31 Dec 2010; Jeroen Roovers <jer@gentoo.org> libXmu-1.1.0.ebuild:
  Stable for HPPA (bug #344827).

  29 Dec 2010; Markus Meier <maekke@gentoo.org> libXmu-1.1.0.ebuild:
  arm stable, bug #344827

  25 Dec 2010; Christian Faulhammer <fauli@gentoo.org> libXmu-1.1.0.ebuild:
  x86 stable, bug 344827
