@@ -4,13 +4,26 @@ Hash: SHA256
 DIST libXmu-1.1.0.tar.bz2 360663 SHA256 0fa91f303b70decc1ef6201c88c8a5f0b4ecd68c6c88bdcc891ecd1a689d36ad SHA512 c89e19ca1aaef50b9fb05ea5186606d6d74243dad0dab4cb2b0b831c674d4a6f1e2b5acc32f2c9e5a1062243a4bfe0a522e7610cfaf962b9608ae2e6e4b0f592 WHIRLPOOL 519447d8dd060014bd89c82d52da64bf8ab855c551ef58d50f5d5a87a35a588c8cd7c999213bc6466724467f0737f771f46a88b8d280a075811193eba4b57570
 DIST libXmu-1.1.1.tar.bz2 383473 SHA256 709081c550cc3a866d7c760a3f97384a1fe16e27fc38fe8169b8db9f33aa7edd SHA512 fb3baf697bb93fd5c2a26af318b9f7632b83bb2efe9cb4570b799ecca54e7de93248930fb8fd14d973c67612ad31502733417b1a6eb6d0c91ebafa204371c953 WHIRLPOOL f5c897ed6ebbb57e0367be8f7b790f7ce557930deabf66243c71802125072887fcf73fcd7ffa29323e4030f70fad402d754248bd15e8e87ab535b77e6d5c2002
 EBUILD libXmu-1.1.0.ebuild 815 SHA256 d5f30c23e30bf136fab4e2f2e7586c5bee26a958de22af83c800a59c4ae04282 SHA512 39f9715371fa6694af6b5eeaef6a57e15c34e6cfb5b4d11f7b670be07176df3f6c90bfa56dfbc96ba49669674de2e3a1382d6858a3700b6d11c97dc99d39b441 WHIRLPOOL 916c70ca0da57cf3144eaee82353c496a1ae682fce2a448c022d6b0fd8b691c50f7cb6ac50a79d8b0829cd34f6ea0fca74ec50d30cf4dd62093260f3d62afb89
+EBUILD libXmu-1.1.1-r1.ebuild 943 SHA256 8ebbe4ffec33473f64bb47ab88399b1de57fb6f1f7487b6a5c9eddcc72713849 SHA512 4653cb1e9a5e801577179b57957475e1d45bfeca707bc2efeee9f976265174a7c2b99347c097c6140a16b793cd57ea6023cc2d600b61e6d477dcbab89dbb965d WHIRLPOOL 3cc0cc9490aa0f59d8d9cf7fd8dd9d85f5d61238e18cda9492a70d75affa1eda42d6eaf9ce3cbb03f0e9a1422d38edb2dc7fed799a0246882d4f50e01774c59f
 EBUILD libXmu-1.1.1.ebuild 833 SHA256 c5bcfceb5f92e2aa96cbe94c5cd1ba9fe8b7fb3aa0537ab8e785d1ea39623c08 SHA512 0ef464864aa3139e803a031bd32686268e234d2a2f518b9e426ca9c7bcc628bc6f698c52486b7a1e721f14603b4a3faacd7025439df6f462ef4572ede2fbbb2e WHIRLPOOL 7d10b7f7fffea2bbb99862ea72cc8dd5748e8fd9eb8805b21dd26392f657db8490aee4a8920af1b111903f8bd73823bf719945644d2223cae0acb7d72d481205
-MISC ChangeLog 8899 SHA256 d4a3138ff7349a4a05c94d0930f69f201a09cbb46616e42448dd6b98b073df62 SHA512 c4e9eb6e660b922f7b35f9cdeb942dc56205c5602643ed29a2caefb292a8c245f89d261f7e05be80560789801c1a24e448f9b9fd1dbe9f1098ff6b3e482aba2f WHIRLPOOL 698d8c072878e14f82207eaa9625ea2c1c516008b8c2e315c5c6d2226e436aaf24fea8eed8942cb8f55091983548bd41f50e698aea7bca99b820ee6ce61dd4c5
+MISC ChangeLog 9025 SHA256 27ea86858dd2d188c5504f46d26bda86e253499018d586fe44ea4346bfbe49b4 SHA512 6d6ba2de5140ea59cb7c58c38a59d6be46700324e224752d1d66a770a7fd35b1f82ea98a7d43f15b78bcee422ab19b926fe9acd129a3a737842f9488c088d50b WHIRLPOOL fbc5977948b65528bcceb5e18bcd753e6920990e278dd086844ff57cf31d859f84d0030970c41265ee5598a63ee75927efe3f98deef72b7986fb5495fefb4c57
 MISC metadata.xml 156 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055 SHA512 daa9bb2a9b1a16220327bc394f10d93a1a8a427bfbed8808cd247c1dfd5a5b87a4945d55d8243e07fede2c8182a208c618ebd483773d77e9d23862ec77016019 WHIRLPOOL 691e028648bb8b60771d74ef718c51fdb0f4a587e984f6ac4c13d7796415ecf770df2e0fd766399091771924bb65995e9bb290baa35971c56e07d76f2bbf6d93
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEnvL4ACgkQ/ejvha5XGaNHbgCggYd0Zx5+y5Lf7EE3l/FyMXzB
-2HEAnjhhmrjwFz1bM2GgDKGwneLfreMI
-=b6xY
+iQJ8BAEBCABmBQJRLOFzXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRGRDhEM0MyMERDMzNBMkYzQzJFRTI3QjE5
+NjI3RjQ1NkY5REE3NjQzAAoJEJYn9Fb52nZDmrQP/1T5wZMUfNSqiDu3do/5wGdQ
+cvrgkrjF5v1AeJ922NNpHRfjo93P507DuzrEpUA0JjXAQs3QoF524zdQuVC8/vpd
+2ispGJkuiYfH9dZPSv9WwxXBUrmFfw09TY2g634dzIpLcNP7OF8S0TC4goIm6/5K
+/FKE+J99QQQdpu19kWZle9kkviedcbAa/0wZikMiftVR3IghcEtYLye3VWWrtHvi
+pQMJobJwOmc4YYMnspwxn8gkiWUMJaMRJsfbvBB/DA0ULezHE4rujDu6sAgvzcSH
+gmvLwHrcAkqqdUCitGoYTm0fJaev91Cx3mAieIOqquiaI/UOliejctBVIDLUCMJX
+xbNKwNxQ+M8+eW/gVi90jenHLnjk7uBLmG/OL2GZW4Mf21HD5GVt9JaD8632hKwl
+AilqGrGBuaJybOGLnHn1/J0xXr0kfPoVi5tODz4lH6rHMaLuuLQBKEP//m8niLzQ
+CIa8wx/mAs4uvTPVv3BIuHvjoDrwTcD7IUAt9Q0yrnalUxmSP53VUOpsdNBOHfYc
+m+nS8CtvxhoXSzCBJK3gZsbjZCHeoc2J1wkY6QhXuEesrqO7i4ANzExjKqkpqGdu
+Y4CapIyOP6ySFlQpmP3Wm3CcciGcQ02vnKzMH9htLvci8w02uVo2lSJt0hoHvKuD
+c1VLinFe1qJVeqsJyPJZ
+=bYos
 -----END PGP SIGNATURE-----
